# GPUPathTracer

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  scene.txt
src/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Buffer.cpp  Buffer.h  CMakeLists.txt  Camera.cpp  Camera.h  DataBuf.cpp  DataBuf.h  Mesh.cpp  Mesh.h  Program.cpp  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  TODO.txt  Texture.cpp  Texture.h  TimeUtil.cpp  TimeUtil.h  Vertex.h  VertexArray.cpp  VertexArray.h  Window.cpp  Window.h
src/RelWithDebInfo/: OpenGL_LightTransport.exp  OpenGL_LightTransport.lib
src/core/: BVH.cpp  BVH.h  Buffer.cpp  Buffer.h  OpenGL.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/math/: AABB.cpp  AABB.h  Camera.cpp  Camera.h  Ray.h  Triangle.cpp  Triangle.h  TriangleIndexing.cpp  TriangleIndexing.h  Vertex.cpp  Vertex.h
src/misc/: TimeUtil.cpp  TimeUtil.h  Window.cpp  Window.h
src/res/objects/: casa2.mtl
src/res/shaders/geometry/: Object.glsl  Ray.glsl  Triangle.glsl
src/res/shaders/kernel/: DataBuf.glsl
src/res/shaders/shading/: Material.glsl
src/shaders/: EquirectangularConverter.frag  EquirectangularConverter.vert  Extend.comp  Generate.comp  Iterative.comp  Present.frag  Reference.comp  Shade.comp
src/shaders/accelstruct/: Structure.glsl  Traverse.glsl
src/shaders/accelstruct/BVH/: Traverse.glsl
src/shaders/camera/: Pinhole.glsl
src/shaders/common/: BSDF.glsl  BVH.glsl  Constants.glsl  Geometry.glsl  MIS.glsl  Material.glsl  Microfacet.glsl  Random.glsl  Sky.glsl  Util.glsl
src/shaders/extra/: Image.frag  Image.vert
src/shaders/geometry/: AABB.glsl  Object.glsl  Ray.glsl  Triangle.glsl
src/shaders/present/: Present.frag  Present.vert
src/shaders/shading/: CookTorrance.glsl
(+17 files in other folders)
